<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:layout_marginBottom="10dp">

    <TextView
        android:id="@+id/tip_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_tips"
        app:layout_constraintBottom_toBottomOf="@id/data"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/data" />

    <EditText
        android:id="@+id/data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/data_hint"
        app:layout_constraintLeft_toRightOf="@id/tip_data"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/send_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        app:layout_constraintBottom_toBottomOf="@id/data"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/data" />

    <TextView
        android:id="@+id/tip_mtu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mtu_tips"
        app:layout_constraintBottom_toBottomOf="@id/mtu"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/mtu" />

    <EditText
        android:id="@+id/mtu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/mtu_hint"
        android:inputType="number"
        app:layout_constraintLeft_toRightOf="@id/tip_mtu"
        app:layout_constraintTop_toBottomOf="@id/data" />

    <Button
        android:id="@+id/send_mtu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        app:layout_constraintBottom_toBottomOf="@id/mtu"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/mtu" />

</androidx.constraintlayout.widget.ConstraintLayout>